feat: refactor customer dashboard repository and show service; update JSP and i18n files for improved localization and data handling